# gstop

./: .gitignore  README.md  pyproject.toml
gstop/: __init__.py  common.py  stop_tokens.json  stopper.py
