[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gstop"
description = "Generation Stopping Criteria for transformers Language Model"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "ksterx", email = "kostonerx@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "transformers",
    "torch",
    "loguru",
]
version = "0.2.3"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
